# cotirema

./: Cargo.toml  README.md
macro/: Cargo.toml
macro/src/: lib.rs  utils.rs
src/: lib.rs
tests/: macros.rs
