[workspace]
members = [ "macro"]

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "deny"
future_incompatible = "deny"

[workspace.lints.rustdoc]
all = "deny"

[workspace.lints.clippy]
all = "deny"
pedantic = "deny"
nursery = "deny"

enum_glob_use = "allow"
equatable_if_let = "allow"

[package]
name = "cotirema"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cotirema-macro = { path = "./macro/" }

